examples/test/testpolicy15005.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15005
  namespace: namespace117
spec:
  podSelector:
    matchLabels:
      key37: value23
      key45: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value26
          key38: value13
          key47: value37
      podSelector:
        matchLabels:
          key14: value36
          key41: value37
          key4: value22
